--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         </main>
     </div>
     
+    <footer>
+        Feito com 
+        <img src="assets/ph_heart-fill.svg" alt="coração">
+    </footer>
     
 </body>
 </html>
